--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build",
     "babel-node": "babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
