--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,29 @@
-extends: airbnb-base
+extends:
+  - airbnb-base
+  - plugin:import/errors
+  - plugin:import/warnings
+  - prettier
+  - plugin:prettier/recommended
 
 parser: babel-eslint
 
+parserOptions:
+  ecmaVersion: 2020
+  sourceType: module
+
+env:
+  es6: true
+  node: true
+  jest: true
+
+plugins:
+  - prettier
+  - babel
+  - import
+  - simple-import-sort
+
 rules:
   no-console: 0
+  prettier/prettier: 'error'
+  simple-import-sort/sort: 'error'
+  sort-imports: 'off'
